front-end: mobile menu and stuff

--- a/public/assets/scss/_variables.scss
+++ b/public/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $very-light-gray: #f8f8f8;
 $light-blue: #E8F7FF;
 
 $primary: $violet;
+$secondary: $dark-blue;
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
