--- a/public/assets/scss/_global.scss
+++ b/public/assets/scss/_global.scss
@@ -24,3 +24,56 @@ $grid-breakpoints: (
   xl: 1200px,
   xxl: 1400px
 );
+
+/* Ripple effect on btn */
+.btn:not(.btn-search) {
+    position: relative;
+    overflow: hidden;
+    border: none;
+    border-radius: 2px;
+    padding: 12px 18px;
+    font-size: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
+    box-shadow: 0 0 4px #999;
+    outline: none;
+    display: inline-block;
+    text-align: center;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    color: white;
+    outline: none;
+    &:after {
+      display: none;
+      content: "";
+      position: absolute;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.25);
+  
+      width: 100px;
+      height: 100px;
+      margin-top: -50px;
+      margin-left: -50px;
+  
+      /* Center the ripple */
+      top: 50%;
+      left: 50%;
+  
+      animation: ripple 1s;
+      opacity: 0;
+    }
+    &:focus:not(:active)::after {
+      display: block;
+    }
+  }
+  
+  @keyframes ripple {
+    from {
+      opacity: 1;
+      transform: scale(0);
+    }
+    to {
+      opacity: 0;
+      transform: scale(10);
+    }
+  }
