--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,13 +20,14 @@
         {% block body %}
         
         {% endblock %}
+        {% include 'main/footer.html.twig' %}
         {% block javascripts %}
             <script src="{{ asset('/assets/js/jquery-3.5.1.min.js') }}"></script>
             <script src="{{ asset('/assets/js/bootstrap.bundle.min.js') }}"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.6/lottie.min.js"></script>
-            <script src="{{ asset('/assets/js/script.js') }}"></script>
             <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
             <script src="{{ asset('/assets/js/avis.js') }}"></script>
+            <script src="{{ asset('/assets/js/script.js') }}"></script>
         {% endblock %}
     </body>
     
