--- a/templates/main/header.html.twig
+++ b/templates/main/header.html.twig
@@ -3,8 +3,9 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg bg-white d-lg-flex align-items-lg-center">
             <a class="navbar-brand" href="{{ path('dashboard') }}">Forum<span class="span-logo">Learning</span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <div class="material-icons">menu</div>
+            <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <!--<div class="material-icons">menu</div>-->
+              <div id="hamburger" style="width: 42px;"></div>
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -48,5 +49,24 @@
             {% endfor %}
         </div>
     </div>
+</div>
+
+<div class="overlay">
+    <nav class="d-lg-none menu-mobile">
+        <ul class="navbar-nav">
+            <li class="nav-item {% if current_menu is defined and current_menu == 'dashboard' %}active{% endif %}">
+              <a class="nav-link d-inline-flex align-items-center mx-xxl-2" href="{{ path('dashboard') }}"><i class="pt-lg-1 pt-xxl-0 mr-lg-1 material-icons pr-1 pr-xxl-0">home</i><span class="d-lg-none d-xxl-inline-flex">Accueil</span></a>
+            </li>
+            <li class="nav-item {% if current_menu is defined and current_menu == 'topics_new' %}active{% endif %}">
+                <a class="nav-link d-inline-flex align-items-center mx-xxl-2" href="{{ path('topics_new') }}"><i class="material-icons pt-lg-1 pt-xxl-0 mr-lg-1 pr-1 pr-xxl-0">create</i><span class="d-lg-none d-xxl-inline-flex">Créer un Topic</span></a>
+              </li>
+            <li class="nav-item {% if current_menu is defined and current_menu == 'profil' %}active{% endif %}">
+              <a class="nav-link d-inline-flex align-items-center mx-xxl-2" href="{{ path('profil') }}"><i class="material-icons pt-lg-1 pt-xxl-0 mr-lg-2 pr-1 pr-xxl-0">account_box</i><span class="d-lg-none  d-xxl-inline-flex">Mon compte</span></a>
+            </li>
+            <li class="nav-item pt-8">
+                <a href="{{ path('app_logout') }}" class="ml-lg-2 btn btn-secondary d-inline-flex align-items-center"><i class="material-icons pr-2 pr-lg-0 pr-xl-2">logout</i><span class="d-lg-none d-xl-inline-flex">Se déconnecter</span></a>
+            </li>
+          </ul>
+          
 </div>
 {% endblock %}
