--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -17,10 +17,12 @@
     <div class="row">
         <div class="col-12 col-md-10">
             {% for topic in topicsRecent %}
-                    <div class="row px-3 my-4">
+                    <div class="row px-3 my-4 position-relative">
+                        <!--<div class="topics-id">{{ topic.id }}</div>-->
                         <div class="topic-box card">
-                            <div class="topic-title card-header pt-3 px-3 d-flex align-items-center justify-content-between"><span class="h5 violet">{{ topic.title }}</span>
-                                <div class="font-italic posted-by"><span>Posté par {{ topic.users.pseudo }}</span> <span>Le {{ topic.date ? topic.date|date('d/m/Y') : '' }} à {{ topic.date ? topic.date|date('H:i') : '' }}</span><span class="topic-id pl-4">{{ topic.id }}</span></div>
+                            
+                            <div class="topic-title text-uppercase card-header pt-3 px-3 d-flex align-items-center justify-content-between"><span>{{ topic.title }}</span>
+                                <div class="font-italic posted-by font-weight-normal px-3"><span>Posté par {{ topic.users.pseudo }}</span> <span>Le {{ topic.date ? topic.date|date('d/m/Y') : '' }} à {{ topic.date ? topic.date|date('H:i') : '' }}</span></div>
                             </div>
                             
                             <div class="col-12 pt-1 topic-text">
@@ -58,7 +60,7 @@
                             <div class="ml-auto text-right pr-4 mr-2">
                                 <a class="btn btn-sm btn-primary mr-2" href="{{ path('topics_show', {'id': topic.id}) }}">Voir</a>
                             {% if is_granted('ROLE_ADMIN') or ((topic.users == app.user) and (editLimit[topic.id] == 1)) %}
-                                <a href="{{ path('topics_edit', {'id': topic.id}) }}" >Modifier</a>
+                                <a id="user-modif-btn" href="{{ path('topics_edit', {'id': topic.id}) }}" >Modifier</a>
                             {% endif %}
                             </div>
                         </div>
@@ -66,10 +68,31 @@
                     </div>
                 {% else %}
                     <br>
-                        <div class="warning">Pas d'entrée trouvée</div>
+                        <div class="text-warning">Pas d'entrée trouvée</div>
                 {% endfor %}
         </div>
     </div>
+
+    {% if (app.user.topics == true) %}
+    <div class="row mt-4">
+        <div class="col-12 border-top py-4">
+            <h2 class="h5 secondary">Tes Topics postés</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-md-10">
+            <ul class="list-group">
+                {% for topic in app.user.topics %}
+                    <li class="my-1 list-group-item d-flex justify-content-between align-items-center">
+                        <a class="d-block w-100 h-100" href="{{ path('topics_show', {'id': topic.id}) }}">{{topic.title}}</a>
+                    </li>
+                
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    {% endif %}
 </div>
 
 {% endblock %}
