--- a/templates/reports/_form.html.twig
+++ b/templates/reports/_form.html.twig
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center">
             <a href="{{ path('topics_show', {'id' : app.request.get('id')}) }}">🠐 Retour au topic</a>
-            <button class="btn btn-primary">{{ button_label|default('Publier') }}</button>
+            <button class="btn btn-danger">{{ button_label|default('Signaler') }}</button>
         </div>
     </div>
 {{ form_end(form) }}
