--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -6,20 +6,44 @@
 {% include 'main/header.html.twig' %}
 
 <div class="container">
-    <div class="row mt-4">
+    <div class="row my-4">
         <div class="col-12">
-            <h1>Profil de {{ app.user.pseudo }}</h1>
-            <p><strong>Pseudo :</strong>{{app.user.pseudo}}</p>
-            <p><strong>Email :</strong>{{app.user.email}}</p>
-            <p><strong>Role :</strong>{% for role in app.user.roles %} {{role}}{% endfor %}</p>
-            <a href="{{ path('profil_edit')}}"> Modifier le profil</a><br>
-            <a href="{{ path('password_edit')}}"> Modifier le mot de passe</a>
-            <h2>Topics posté</h2>
-            {% for topic in app.user.topics %}
-            <a href="{{ path('topics_show', {'id': topic.id}) }}">{{topic.title}}</a><br>
-            {% endfor %}
+            <h1 class="text-uppercase">compte</h1>
+            <h2 class="h5 violet">Profil de {{ app.user.pseudo }}</h2>
+        </div>
+            <div class="col-12 my-4">
+                <p><strong>Pseudo :</strong> {{app.user.pseudo}}</p>
+            <p><strong>Email :</strong> {{app.user.email}}</p>
+            <p><strong>Role :</strong> {% for role in app.user.roles %} {{role}}{% endfor %}</p>
+            </div>
+            
+            <div class="col-12"><a href="{{ path('profil_edit')}}"> Modifier le profil</a></div>
+            <div class="col-12"><a href="{{ path('password_edit')}}"> Modifier le mot de passe</a></div>
+            <div class="col-12 pt-2"><a href="{{ path('app_logout') }}" class="btn btn-primary d-inline-flex align-items-center"><i class="material-icons pr-2 pr-lg-0 pr-xl-2">logout</i><span class="d-inline-flex">Se déconnecter</span></a></div>
+    </div>
+            
+
+    {% if (app.user.topics == true) %}
+    <div class="row">
+        <div class="col-12">
+            <h2 class="text-uppercase">Topics postés</h2>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-12 col-md-10">
+            <ul class="list-group">
+                {% for topic in app.user.topics %}
+                    <li class="my-1 list-group-item d-flex justify-content-between align-items-center">
+                        <a class="d-block w-100 h-100" href="{{ path('topics_show', {'id': topic.id}) }}">{{topic.title}}</a>
+                    </li>
+                
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    {% endif %}
+        
     
 </div>
 {% endblock %}
