--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,7 @@
             <script src="{{ asset('/assets/js/bootstrap.bundle.min.js') }}"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.6/lottie.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
             <script src="{{ asset('/assets/js/avis.js') }}"></script>
             <script src="{{ asset('/assets/js/script.js') }}"></script>
         {% endblock %}
