--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -97,6 +97,13 @@
 
 </div>
 
+<!-- Parallax -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+<script>
+    /* Parallax */
+    var scene = document.getElementById('scene');
+    var parallax = new Parallax(scene);
+</script>
 
 
 
