--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -9,7 +9,8 @@
 
     <div class="row mt-4">
         <div class="col-12">
-            <h1 class="text-uppercase">Modification de votre compte <span class="violet">{{ app.user.pseudo }}</span></h1>
+            <h1 class="text-uppercase">Modification de votre compte</h1>
+            <h2 class="h5 violet">{{ app.user.pseudo }}</h2>
         </div>
 
         <div class="col-12 col-md-10 col-lg-8 col-xxl-6 mt-4">
