--- a/templates/topics/new.html.twig
+++ b/templates/topics/new.html.twig
@@ -35,6 +35,12 @@
         </div>
     </div>
     
-
+<!-- Parallax -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+<script>
+    /* Parallax */
+    var scene = document.getElementById('scene');
+    var parallax = new Parallax(scene);
+</script>
     
 {% endblock %}
