--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -19,6 +19,15 @@
             
             <div class="col-12"><a href="{{ path('profil_edit')}}"> Modifier le profil</a></div>
             <div class="col-12"><a href="{{ path('password_edit')}}"> Modifier le mot de passe</a></div>
+            
+            <div class="col-12">
+                <form method="post" action="{{ path('profil_delete', {'id': app.user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                    <input type="hidden" name="_method" value="DELETE">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ app.user.id) }}">
+                    <button class="btn-danger btn">Delete</button>
+                </form>
+            </div>
+
             <div class="col-12 pt-2"><a href="{{ path('app_logout') }}" class="btn btn-primary d-inline-flex align-items-center"><i class="material-icons pr-2 pr-lg-0 pr-xl-2">logout</i><span class="d-inline-flex">Se déconnecter</span></a></div>
     </div>
             
