--- a/templates/topics/_form.html.twig
+++ b/templates/topics/_form.html.twig
@@ -2,7 +2,7 @@
     {{ form_widget(form) }}
     <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center">
-            <a href="{{ path('topics_index') }}">🠐 Retour à la liste des topics</a>
+            <a href="{{ path('topics_show', {'id' : app.request.get('id')}) }}">🠐 Retour au topic</a>
             <button class="btn btn-primary">{{ button_label|default('Publier') }}</button>
         </div>
     </div>
