--- a/templates/topics/show.html.twig
+++ b/templates/topics/show.html.twig
@@ -9,7 +9,7 @@
     <div class="row my-4 justify-content-center">
         <div class="col-12">
             <h1 class="text-uppercase">Ce topic</h1>
-            <h2 class="h5 violet">{{ topic.title }} - <span class="text-italic">Posté par {{ topic.users.pseudo }}</span></h2>
+            <h2 class="h5 violet">{% if topic.reports | length > 0 %}<span class="material-icons d-inline-flex text-danger">fmd_bad</span> {% endif %}{{ topic.title }} - <span class="text-italic">Posté par {{ topic.users.pseudo }}</span></h2>
             <span class="metas">Le {{ topic.date ? topic.date|date('d/m/Y') : '' }} à {{ topic.date ? topic.date|date('H:i') : '' }}</span>
         </div>
 
@@ -27,7 +27,7 @@
                     <span class="material-icons like">thumb_up_off_alt</span>
                 {% endif %}
                 <span class="pl-2 pr-1 js-likes">{{topic.likes | length}}</span>
-                <span>like{% if topic.likes |length > 1 %}s{% endif %}</span>
+                <span>like{% if topic.likes | length > 1 %}s{% endif %}</span>
             </a>
             
             <!-- Dislikes -->
@@ -38,7 +38,7 @@
                     <span class="material-icons dislike">thumb_down_off_alt</span>
                 {% endif %}
                 <span class="pl-2 pr-1 js-dislikes">{{topic.dislikes | length}}</span>
-                <span>dislike{% if topic.dislikes |length > 1 %}s{% endif %}</span>
+                <span>dislike{% if topic.dislikes | length > 1 %}s{% endif %}</span>
             </a>
 
             <a class="d-flex ml-auto mr-3 p-1" href="{{ path('commentaires_new', {'id': topic.id}) }}"><i class="material-icons pr-1">add</i>Ajouter un commentaire</a>
