--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -17,7 +17,12 @@
             {% else %}
             <h1 class="text-uppercase">Dashboard</h1>
             {% endif %}
-            <h2 class="h5 violet {% if is_granted('ROLE_ADMIN') %}pt-5 {% endif %}">Les derniers topics</h2>
+            <div class="col-10 d-inline-flex pl-0 align-items-center {% if is_granted('ROLE_ADMIN') %}pt-5 {% endif %}">
+                <h2 class="h5 violet col-6 pl-0">Les derniers topics</h2>
+                <div class="col-8 col-md-10">
+                    <a class="btn btn-primary d-inline-flex justify-content-end" href="{{ path('topics_new') }}">Créer un nouveau topic</a>
+                </div>
+            </div>
         </div>
     </div>
 
