--- a/templates/reports/index.html.twig
+++ b/templates/reports/index.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Reports index{% endblock %}
 
 {% block body %}
+{% include 'main/header.html.twig' %}
+<div class="container mt-4">
+    <a href="{{ path('dashboard') }}">🠐 Retour au Dashboard</a>
     <h1>Reports index</h1>
 
     <table class="table">
@@ -34,4 +37,5 @@
         {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
