--- a/templates/topics/index.html.twig
+++ b/templates/topics/index.html.twig
@@ -9,7 +9,13 @@
     <div class="row mt-4">
         <div class="col-12">
             <h1 class="text-uppercase">Liste des topics</h1>
-            <h2 class="h5 violet">Le dernier en haut</h2>
+            <div class="col-10 d-inline-flex pl-0 align-items-center">
+                <h2 class="h5 violet col-6 pl-0">Le dernier en haut</h2>
+                <div class="col-8 col-md-10">
+                    <a class="btn btn-primary d-inline-flex justify-content-end" href="{{ path('topics_new') }}">Créer un nouveau topic</a>
+                </div>
+            </div>
+            
         </div>
     </div>
 
@@ -77,9 +83,6 @@
                 {% endfor %}
         </div>
 
-        <div class="col-12 col-md-10">
-            <a class="btn btn-primary d-inline-flex justify-content-end" href="{{ path('topics_new') }}">Créer un nouveau topic</a>
-        </div>
     </div>
         </div>
     </div>
